--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 add_subdirectory(src)
 
 include(cmake/googletest.cmake)
-fetch_googletest(
-        ${PROJECT_SOURCE_DIR}/cmake
-        ${PROJECT_BINARY_DIR}/googletest
-)
+fetch_googletest(${PROJECT_SOURCE_DIR}/cmake${PROJECT_BINARY_DIR}/googletest)
 
 enable_testing()
 add_subdirectory(test)
