--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,4 +6,4 @@ aux_source_directory(./internal FAKELUA_SRC_LIST)
 include_directories(./internal)
 include_directories(./)
 add_library(fakelua SHARED ${FAKELUA_SRC_LIST})
-target_compile_options(fakelua PRIVATE -std=c++20 -g3 -Wall)
+target_compile_options(fakelua PRIVATE -std=c++2a -g3 -Wall)
