--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,3 +11,9 @@ add_executable(unit_tests ${TEST_SRC_LIST})
 target_link_libraries(unit_tests gtest_main fakelua)
 
 add_test(NAME unit COMMAND ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/unit_tests)
+
+add_custom_command(
+        TARGET unit_tests
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test.lua ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test.lua
+)
