--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,9 +7,9 @@ include_directories(../src)
 include_directories(../src/internal)
 
 add_executable(unit_tests ${TEST_SRC_LIST})
-target_compile_options(unit_tests PRIVATE -std=c++2a -g3 -Wall)
+target_compile_options(unit_tests PRIVATE -std=c++2a -g3 -Wall -Werror)
 
-target_link_libraries(unit_tests gtest_main fakelua)
+target_link_libraries(unit_tests fakelua)
 
 add_test(NAME unit COMMAND ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/unit_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 
