--- a/cmd/CMakeLists.txt
+++ b/cmd/CMakeLists.txt
@@ -7,5 +7,11 @@ include_directories(./)
 include_directories(../src/)
 
 add_executable(lua ${LUA_SRC_LIST})
-target_compile_options(lua PRIVATE -std=c++2a -g3 -Wall -Werror)
+
+IF (CMAKE_BUILD_TYPE STREQUAL "release")
+    target_compile_options(lua PRIVATE -std=c++2a -g3 -Wall -Werror -O3)
+ELSE()
+    target_compile_options(lua PRIVATE -std=c++2a -g3 -Wall -Werror -O0)
+ENDIF()
+
 target_link_libraries(lua fakelua)
