--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -3,12 +3,12 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 project(benchmark)
 
 aux_source_directory(./ BENCHMARK_SRC_LIST)
+include_directories(./)
 include_directories(../src)
-include_directories(../src/internal)
 
 add_executable(bench_mark ${BENCHMARK_SRC_LIST})
 
-target_link_libraries(bench_mark fakelua)
+target_link_libraries(bench_mark fakelua benchmark_main)
 
 add_custom_command(
         TARGET bench_mark
