--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,26 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 
-IF (CMAKE_BUILD_TYPE STREQUAL "release")
-    message("build release fakelua")
-    add_compile_options(-std=c++2a -g3 -Wall -Werror -ggdb -fPIC -O3)
-ELSE()
-    message("build debug fakelua")
-    add_compile_options(-std=c++2a -g3 -Wall -Werror -ggdb -fPIC -O0 -fno-omit-frame-pointer -fsanitize=address)
-    link_libraries(-fno-omit-frame-pointer -fsanitize=address -static-libasan)
-ENDIF()
+set(ENV{FAKELUA_HOME} "${CMAKE_CURRENT_SOURCE_DIR}/")
+
+option(USE_ASAN "use asan" OFF)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++2a -DNDEBUG -O2 -g3 -ggdb -fPIC")
+if (USE_ASAN)
+    message("build with asan")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
+endif ()
+
+find_program(CCACHE_PROGRAM ccache)
+if (CCACHE_PROGRAM)
+    message("build with ccache")
+    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
+endif ()
+
+include(cmake/gflags.cmake)
+include(cmake/gperftools.cmake)
+include(cmake/benchmark.cmake)
+include(cmake/googletest.cmake)
 
 add_subdirectory(src)
 add_subdirectory(cmd)
