--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,12 +3,12 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 project(test)
 
 aux_source_directory(./ TEST_SRC_LIST)
+include_directories(./)
 include_directories(../src)
-include_directories(../src/internal)
 
 add_executable(unit_tests ${TEST_SRC_LIST})
 
-target_link_libraries(unit_tests fakelua)
+target_link_libraries(unit_tests fakelua gtest_main)
 
 add_test(NAME unit COMMAND ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/unit_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 
