--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,13 +10,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 
 set(ENV{FAKELUA_HOME} "${CMAKE_CURRENT_SOURCE_DIR}/")
 
-option(USE_ASAN "use asan" OFF)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -DNDEBUG -O2 -g3 -ggdb -fPIC")
-if (USE_ASAN)
-    message("build with asan")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
-endif ()
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -DNDEBUG -O2 -g3 -ggdb -fPIC")
 
 find_program(CCACHE_PROGRAM ccache)
 if (CCACHE_PROGRAM)
