--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,6 +12,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Prepare
+        run: |
+          sudo apt-get update
+          sudo apt-get install gdb
 
       - name: Build
         run: |
