--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(../src)
 
 add_executable(unit_tests ${TEST_SRC_LIST})
 
-target_link_libraries(unit_tests PRIVATE -static fakelua gtest_main)
+target_link_libraries(unit_tests PRIVATE -static fakelua gtest)
 
 add_test(NAME unit COMMAND ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/unit_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 
