--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,4 @@ project(libfakelua)
 aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
 add_library(fakelua STATIC ${FAKELUA_SRC_LIST})
-target_link_libraries(fakelua PRIVATE -static profiler_static glog::glog gflags_nothreads_static)
+target_link_libraries(fakelua PRIVATE profiler_static glog::glog gflags_nothreads_static)
