--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,11 +21,9 @@ jobs:
 
       - name: Build
         run: |
+          set -x
           mkdir build
           cd build
           cmake ..
           make -j8
-          ldd bin/lua
-          ldd bin/unit_tests
-          gdb bin/unit_tests -ex r
           ctest -V
