add bison and flex initial file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,14 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
 project(libfakelua)
 
+aux_source_directory(./bison FAKELUA_SRC_LIST)
+aux_source_directory(./flex FAKELUA_SRC_LIST)
+aux_source_directory(./compile FAKELUA_SRC_LIST)
 aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
+IF (WIN32)
+    include_directories(./platform/windows)
+ELSE ()
+ENDIF ()
 add_library(fakelua STATIC ${FAKELUA_SRC_LIST})
 target_link_libraries(fakelua PRIVATE profiler_static glog::glog gflags_nothreads_static)
