--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ aux_source_directory(./compile FAKELUA_SRC_LIST)
 aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
 IF (WIN32)
-    include_directories(./platform/windows)
+    include_directories(./platform)
 ELSE ()
 ENDIF ()
 add_library(fakelua STATIC ${FAKELUA_SRC_LIST})
