--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ project(libfakelua)
 aux_source_directory(./bison FAKELUA_SRC_LIST)
 aux_source_directory(./flex FAKELUA_SRC_LIST)
 aux_source_directory(./compile FAKELUA_SRC_LIST)
+aux_source_directory(./state FAKELUA_SRC_LIST)
+aux_source_directory(./util FAKELUA_SRC_LIST)
+aux_source_directory(./fakelua FAKELUA_SRC_LIST)
 aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
 include_directories(./platform)
