--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,12 +8,13 @@ include_directories(../src)
 
 add_executable(unit_tests ${TEST_SRC_LIST})
 
-target_link_libraries(unit_tests PRIVATE fakelua gtest)
+target_link_libraries(unit_tests PRIVATE fakelua gtest_main)
 
-add_test(NAME unit COMMAND ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/unit_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
+add_test(NAME unit COMMAND ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/unit_tests
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 
 add_custom_command(
         TARGET unit_tests
         POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test.lua ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test.lua
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/lua/*.lua ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/
 )
