--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ project(test)
 aux_source_directory(./ TEST_SRC_LIST)
 include_directories(./)
 include_directories(../src)
+include_directories(../src/platform)
 
 add_executable(unit_tests ${TEST_SRC_LIST})
 
