--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Set up GCC
+        uses: egor-tensin/setup-gcc@v1
+        with:
+          version: latest
+          platform: x64
+          
       - name: Prepare
         run: |
           sudo apt-get update
@@ -19,7 +25,7 @@ jobs:
           gdb -v
           cmake --version
           set -x
-
+          
       - name: Build
         run: |
           rm build -rf
