build in windows

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,4 +12,8 @@ aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
 include_directories(./platform)
 add_library(fakelua STATIC ${FAKELUA_SRC_LIST})
-target_link_libraries(fakelua PRIVATE profiler_static glog::glog gflags_nothreads_static)
+IF (WIN32)
+    target_link_libraries(fakelua PRIVATE glog::glog gflags_nothreads_static)
+ELSE ()
+    target_link_libraries(fakelua PRIVATE profiler_static glog::glog gflags_nothreads_static)
+ENDIF ()
