--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,10 @@ if (CCACHE_PROGRAM)
 endif ()
 
 include(cmake/gflags.cmake)
-#include(cmake/gperftools.cmake)
+IF (WIN32)
+ELSE ()
+    include(cmake/gperftools.cmake)
+ENDIF ()
 include(cmake/benchmark.cmake)
 include(cmake/googletest.cmake)
 include(cmake/glog.cmake)
