--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ aux_source_directory(./util FAKELUA_SRC_LIST)
 aux_source_directory(./fakelua FAKELUA_SRC_LIST)
 aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
+include_directories(../include)
 include_directories(./platform)
 add_library(fakelua STATIC ${FAKELUA_SRC_LIST})
 IF (WIN32)
