--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ aux_source_directory(./compile FAKELUA_SRC_LIST)
 aux_source_directory(./state FAKELUA_SRC_LIST)
 aux_source_directory(./util FAKELUA_SRC_LIST)
 aux_source_directory(./fakelua FAKELUA_SRC_LIST)
+aux_source_directory(./interpreter FAKELUA_SRC_LIST)
 aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
 include_directories(../include)
