--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,7 +26,7 @@ jobs:
           cd objdir
           $PWD/../gcc-13.2.0/configure --disable-multilib --enable-languages=c,c++
           make -j8
-          make install
+          sudo make install
           gcc -v
           g++ -v
           cmake --version
