--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,16 +24,15 @@ jobs:
           cd ..
           mkdir objdir
           cd objdir
-          $PWD/../gcc-13.2.0/configure --disable-multilib --enable-languages=c,c++
+          mkdir -p /home/ubuntu/project/GCC-13.2.0
+          $PWD/../gcc-13.2.0/configure --prefix=/home/ubuntu/project/GCC-13.2.0 --disable-multilib --enable-languages=c,c++
           make -j8
           sudo make install
           gcc -v
           g++ -v
           cmake --version
-          export PATH=/usr/local/bin:$PATH
-          ls -l /usr/local/bin
-          export LD_LIBRARY_PATH=/usr/local/lib64:$LD_LIBRARY_PATH
-          ls -l /usr/local/lib64
+          export PATH=/home/ubuntu/project/GCC-13.2.0/bin:/home/ubuntu/project/depot_tools:$PATH
+          export LD_LIBRARY_PATH=/home/ubuntu/project/GCC-13.2.0/lib64:$LD_LIBRARY_PATH
           set -x
           
       - name: Build
