--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
           cd ..
           mkdir objdir
           cd objdir
-          echo "cur_home=$PWD" >> $GITHUB_ENV
+          echo "cur_home=$PWD" >> "$GITHUB_ENV"
           ls $cur_home/GCC-13.2.0
           mkdir -p $cur_home/GCC-13.2.0
           $PWD/../gcc-13.2.0/configure --prefix=$cur_home/GCC-13.2.0 --disable-multilib --enable-languages=c,c++
