--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -47,16 +47,12 @@ jobs:
           sudo ln -s $cur_home/GCC-13.2.0/lib64/libstdc++.so.6.0.32 /lib/x86_64-linux-gnu/libstdc++.so.6
           gcc -v
           g++ -v
-          ls -l $cur_home/GCC-13.2.0/lib64
           
       - name: Build
         run: |
           set -x
           printf '%s\n' "$cur_home"
           cd $cur_home
-          ls $cur_home/GCC-13.2.0
-          export PATH=$PATH:$cur_home/GCC-13.2.0/bin
-          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$cur_home/GCC-13.2.0/lib64
           ls -l $cur_home/GCC-13.2.0/lib64
           rm build -rf
           mkdir build
@@ -69,6 +65,9 @@ jobs:
 
       - name: Build with asan
         run: |
+          set -x
+          printf '%s\n' "$cur_home"
+          cd $cur_home
           rm build -rf
           mkdir build
           cd build
