--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,12 +19,11 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV }}
 
-      - name: Set up GCC
-        uses: egor-tensin/setup-gcc@v1
-        with:
-          version: latest
-          platform: x64
-
+      - run:   |
+               sudo apt update
+               sudo apt install gcc-10 g++-10
+        shell: bash
+  
       - name: Prepare
         run: |
           sudo apt-get update
@@ -45,7 +44,11 @@ jobs:
           ctest -V
           ./bin/bench_mark
           cd ..
-
+        shell: bash
+        env:
+         CC:   gcc-10
+         CXX:  g++-10
+   
       - name: Build with asan
         run: |
           rm build -rf
@@ -56,3 +59,7 @@ jobs:
           ctest -V
           ./bin/bench_mark
           cd ..
+        shell: bash
+        env:
+         CC:   gcc-10
+         CXX:  g++-10
