--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,29 +13,46 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - name: Set Env
+        run: |
+          echo "cur_home=$PWD" >> "$GITHUB_ENV"
+
+      - name: Prepare
+        run: |
+          set -x
+          printf '%s\n' "$cur_home"
+          cd $cur_home
+          sudo apt-get update
+          wget http://ftp.tsukuba.wide.ad.jp/software/gcc/releases/gcc-13.2.0/gcc-13.2.0.tar.gz
+          tar -xf gcc-13.2.0.tar.gz
+          cd gcc-13.2.0
+          ./contrib/download_prerequisites
+          cd ..
+          mkdir objdir
+          cd objdir
+          mkdir -p $cur_home/GCC-13.2.0
+          $PWD/../gcc-13.2.0/configure --prefix=$cur_home/GCC-13.2.0 --disable-multilib --enable-languages=c,c++
+          make -j8
+          sudo make install
+          cmake --version
+          export PATH=$cur_home/GCC-13.2.0/bin:$PATH
+          export LD_LIBRARY_PATH=$cur_home/GCC-13.2.0/lib64:$LD_LIBRARY_PATH
+          gcc -v
+          g++ -v
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV }}
 
-      - run:   |
-               sudo apt update
-               sudo apt install gcc-13 g++-13
-        shell: bash
-  
-      - name: Prepare
-        run: |
-          sudo apt-get update
-          sudo apt-get install gdb
-          gcc -v
-          g++ -v
-          gdb -v
-          cmake --version
-          set -x
-
       - name: Build
         run: |
+          set -x
+          printf '%s\n' "$cur_home"
+          cd $cur_home
+          export PATH=$cur_home/GCC-13.2.0/bin:$PATH
+          export LD_LIBRARY_PATH=$cur_home/GCC-13.2.0/lib64:$LD_LIBRARY_PATH
+          ls -l $cur_home/GCC-13.2.0/lib64
           rm build -rf
           mkdir build
           cd build
@@ -44,13 +61,14 @@ jobs:
           ctest -V
           ./bin/bench_mark
           cd ..
-        shell: bash
-        env:
-         CC:   gcc-10
-         CXX:  g++-10
-   
+
       - name: Build with asan
         run: |
+          set -x
+          printf '%s\n' "$cur_home"
+          cd $cur_home
+          export PATH=$cur_home/GCC-13.2.0/bin:$PATH
+          export LD_LIBRARY_PATH=$cur_home/GCC-13.2.0/lib64:$LD_LIBRARY_PATH
           rm build -rf
           mkdir build
           cd build
@@ -59,7 +77,3 @@ jobs:
           ctest -V
           ./bin/bench_mark
           cd ..
-        shell: bash
-        env:
-         CC:   gcc-10
-         CXX:  g++-10
