--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,28 +17,10 @@ jobs:
         run: |
           echo "cur_home=$PWD" >> "$GITHUB_ENV"
 
-      - name: Prepare
-        run: |
-          set -x
-          printf '%s\n' "$cur_home"
-          cd $cur_home
-          sudo apt-get update
-          wget http://ftp.tsukuba.wide.ad.jp/software/gcc/releases/gcc-13.2.0/gcc-13.2.0.tar.gz
-          tar -xf gcc-13.2.0.tar.gz
-          cd gcc-13.2.0
-          ./contrib/download_prerequisites
-          cd ..
-          mkdir objdir
-          cd objdir
-          mkdir -p $cur_home/GCC-13.2.0
-          $PWD/../gcc-13.2.0/configure --prefix=$cur_home/GCC-13.2.0 --disable-multilib --enable-languages=c,c++
-          make -j8
-          sudo make install
-          cmake --version
-          export PATH=$cur_home/GCC-13.2.0/bin:$PATH
-          export LD_LIBRARY_PATH=$cur_home/GCC-13.2.0/lib64:$LD_LIBRARY_PATH
-          gcc -v
-          g++ -v
+      - name: Setup GCC
+        uses: pkgxdev/setup@v1
+        with:
+          +: gcc@13
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
