add gccjit, next compile the function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ aux_source_directory(./compile FAKELUA_SRC_LIST)
 aux_source_directory(./state FAKELUA_SRC_LIST)
 aux_source_directory(./util FAKELUA_SRC_LIST)
 aux_source_directory(./fakelua FAKELUA_SRC_LIST)
-aux_source_directory(./interpreter FAKELUA_SRC_LIST)
+aux_source_directory(./jit FAKELUA_SRC_LIST)
 aux_source_directory(./var FAKELUA_SRC_LIST)
 aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
@@ -16,7 +16,7 @@ include_directories(../include)
 include_directories(./platform)
 add_library(fakelua STATIC ${FAKELUA_SRC_LIST})
 IF (WIN32)
-    target_link_libraries(fakelua PRIVATE glog::glog gflags_nothreads_static)
+    target_link_libraries(fakelua PRIVATE glog::glog gflags_nothreads_static gccjit)
 ELSE ()
-    target_link_libraries(fakelua PRIVATE profiler_static glog::glog gflags_nothreads_static)
+    target_link_libraries(fakelua PRIVATE profiler_static glog::glog gflags_nothreads_static gccjit)
 ENDIF ()
