--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           sudo apt-get -y install libgccjit-13-dev
           dpkg -L libgccjit-13-dev
+          sudo mv /usr/lib/gcc/x86_64-linux-gnu/13/include/libgccjit* /usr/include/
+          sudo mv /usr/lib/gcc/x86_64-linux-gnu/13/libgccjit.so /usr/lib/
           
       - name: Build
         run: |
