--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           sudo apt-get -y install libgccjit-13-dev
           dpkg -L libgccjit-13-dev
           sudo mv /usr/lib/gcc/x86_64-linux-gnu/13/include/libgccjit* /usr/include/
-          sudo mv /usr/lib/gcc/x86_64-linux-gnu/13/libgccjit.so /usr/lib/
+          sudo ln -s /usr/lib/gcc/x86_64-linux-gnu/13/libgccjit.so /usr/lib/libgccjit.so
           
       - name: Build
         run: |
