--- a/.github/workflows/build_with_cov.yml
+++ b/.github/workflows/build_with_cov.yml
@@ -18,7 +18,14 @@ jobs:
         uses: pkgxdev/setup@v1
         with:
           +: gcc@13
-
+          
+      - name: Prepare
+        run: |
+          sudo apt-get -y install libgccjit-13-dev
+          dpkg -L libgccjit-13-dev
+          sudo mv /usr/lib/gcc/x86_64-linux-gnu/13/include/libgccjit* /usr/include/
+          sudo ln -s /usr/lib/gcc/x86_64-linux-gnu/13/libgccjit.so /usr/lib/libgccjit.so
+          
       - name: Build with cov
         run: |
           set -x
