--- a/.github/workflows/build_with_cov.yml
+++ b/.github/workflows/build_with_cov.yml
@@ -25,6 +25,13 @@ jobs:
           dpkg -L libgccjit-13-dev
           sudo mv /usr/lib/gcc/x86_64-linux-gnu/13/include/libgccjit* /usr/include/
           sudo ln -s /usr/lib/gcc/x86_64-linux-gnu/13/libgccjit.so /usr/lib/libgccjit.so
+          wget https://github.com/linux-test-project/lcov/releases/download/v2.0/lcov-2.0.tar.gz
+          tar -xf lcov-2.0.tar.gz
+          cd lcov-2.0/
+          sudo make install
+          yes|sudo perl -MCPAN -e 'install Capture::Tiny' 
+          sudo apt-get install libdatetime-perl -y
+          /usr/local/bin/lcov --version
           
       - name: Build with cov
         run: |
