--- a/.github/workflows/build_with_cov.yml
+++ b/.github/workflows/build_with_cov.yml
@@ -52,5 +52,6 @@ jobs:
           
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV }}
+        with:
+          token: ${{ secrets.CODECOV }}
+          files: ./app.info
